Allow "! entry" in exception lists to track the file (overriding less specific wildcard entries which might indicate a different action).  Prefer more specific wildcard entries, as measured by number of literal characters. Document that literal filenames and more specific wildcard entries are preferred in the exception list.

--- a/subscriptionlist.5
+++ b/subscriptionlist.5
@@ -167,8 +167,17 @@ If, in an
 an item A is preceded by an arrow "->",
 .B track
 will export/import a symbolic-link
-to the librarian's copy of the named item.
-Wild-card patterns may appear in the exception-lists.
+to the librarian's copy of the named item.  If an item is preceded by an
+explanation point "!",
+.B track
+will export/import the file normally, as if it did not appear in the
+exception list.  Wild-card patterns may appear in the exception-lists.
+Literal filenames always supercede wild-card patterns in the
+exception-list; for example, an entry "! filename" would take
+precedence over an entry "-> *".  Wild-card patterns with more literal
+characters supercede wild-card patterns with fewer literal characters;
+for example, an entry "-> a*b" would take precedence over an entry
+"*".
 .RE
 .P
 Because this is a data-description-language, and not a procedural language,
